Fixes based on iOS submission feedback

--- a/client/main.less
+++ b/client/main.less
@@ -71,7 +71,7 @@ strong {
 	top: -20px;
 	height: 60px;
 	width: 100%;
-	box-shadow: 0px 1px 2px #000;
+	/* testing w/o shadow so the pink border is cleaner: box-shadow: 0px 1px 2px #000;*/
 	color: #eee;
 	z-index: 999999;
 	padding-top: 0px;
@@ -728,7 +728,7 @@ html.nontouch .playlists-container li:hover .selectArrow, .playlists-container l
 
 .actionBar{
 	background: rgba(0, 0, 0, 0.7);
-	padding: 15px 15px 15px 15px;	
+	padding: 15px 15px 48px 15px;
 	margin: 0px 0px 10px 0px;
 	display: block;
 	text-decoration: none;
